--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fontsource/roboto": "^5.2.8",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@tailwindcss/vite": "^4.1.13",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.1"
+    "react-router": "^7.9.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
